--- a/html/index.html
+++ b/html/index.html
@@ -12,23 +12,32 @@
     </head>
 
     <body>
-        <header>
-            
-            <nav>
+        <nav>
+            <ul>
+                <li><a href="#"><h1>Parampal Singh Gill</h1></a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="experience.html">Experience</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
 
-            </nav>
-
-        </header>
+        </nav>
 
         <main>
-            <h1>Hi, I'm Parampal Singh Gill</h1>
-
-            <h2>I'm a Software Developer that welcomes challenges and architects solutions.</h2>
-
+            <section class="intro">
+                <h1>I want to build things that make a difference.</h1>
+            </section>
+            
         </main>
 
         <footer>
-            <p>Footer contect</p>
+            <h2>Contact me</h2>
+            <ul>
+                <li><a href="mailto:parampalsinghgill@gmail.com">Email</a></li>
+                <li><a href="www.linkedin.com/in/parampalsinghgill">LinkedIn</a></li>
+                <li><a href="https://github.com/parampalsinghgill">Github</a></li>
+            </ul>
 
         </footer>
     </body>
