Updated experience section
Filled content in experience section and updated footer in all other pages

--- a/html/about.html
+++ b/html/about.html
@@ -26,7 +26,7 @@
 
         <main>
             <section>
-                <h2>Software Developer, experienced in backend development (and learning about frontend development), with a passion for making big impact.</h2>
+                <h2>Versatile Software Developer skilled in backend development and eager learner in frontend technologies, driven by a passion for creating significant impact.</h2>
                 <p>
                     Hi, I'm Parampal Singh Gill, a Software Developer based in Vancouver, BC. With more than 5 years of experience, I've mainly focused on 
                     backend development and also dabbled a bit in frontend work. I've become skilled in several programming languages like Python, Java, C#, C, 
@@ -49,9 +49,9 @@
         <footer>
             <h2>Contact me</h2>
             <ul>
-                <li><a href="mailto:parampalsinghgill@gmail.com">Email</a></li>
-                <li><a href="www.linkedin.com/in/parampalsinghgill">LinkedIn</a></li>
-                <li><a href="https://github.com/parampalsinghgill">Github</a></li>
+                <li><a href="mailto:parampalsinghgill@gmail.com">parampalsinghgill@gmail.com</a></li>
+                <li><a href="www.linkedin.com/in/parampalsinghgill">linkedin.com/in/parampalsinghgill</a></li>
+                <li><a href="https://github.com/parampalsinghgill">github.com/parampalsinghgill</a></li>
             </ul>
 
         </footer>
