--- a/html/index.html
+++ b/html/index.html
@@ -34,9 +34,9 @@
         <footer>
             <h2>Contact me</h2>
             <ul>
-                <li><a href="mailto:parampalsinghgill@gmail.com">Email</a></li>
-                <li><a href="www.linkedin.com/in/parampalsinghgill">LinkedIn</a></li>
-                <li><a href="https://github.com/parampalsinghgill">Github</a></li>
+                <li><a href="mailto:parampalsinghgill@gmail.com">parampalsinghgill@gmail.com</a></li>
+                <li><a href="www.linkedin.com/in/parampalsinghgill">linkedin.com/in/parampalsinghgill</a></li>
+                <li><a href="https://github.com/parampalsinghgill">github.com/parampalsinghgill</a></li>
             </ul>
 
         </footer>
