working on projects page

--- a/html/about.html
+++ b/html/about.html
@@ -25,6 +25,7 @@
         </nav>
 
         <main>
+            <h2>About</h2>
             <section>
                 <h2>Versatile Software Developer skilled in backend development and eager learner in frontend technologies, driven by a passion for creating significant impact.</h2>
                 <p>
