--- a/html/experience.html
+++ b/html/experience.html
@@ -24,6 +24,7 @@
         </nav>
 
         <main>
+            <h2>Experience</h2>
             <section>
                 <!-- article 1 -->
                 <article class="work-experience-article">
