- minor cosmetic updates

--- a/html/experience.html
+++ b/html/experience.html
@@ -91,7 +91,7 @@
                             <li>Developed Python desktop application to streamline production, enabling test initiation on hardware devices and result retrieval</li>
                             <li>Supervised development of lithium-ion battery testing algorithms, enabling comprehensive performance analysis and advancements in battery technology</li>
                             <li>Demonstrated expertise in analyzing Machine Learning approaches, optimizing data classification accuracy</li>
-                            <li>Updated features and bug fixes in C programming language on company’s product (Spectro A) achieving code releases before deadlines</li>
+                            <li>Updated features and bug fixes in C programming language on company's product (Spectro A) achieving code releases before deadlines</li>
                             <li>Promoted to Senior Research Engineer & SW Developer</li>
                         </ul>
                     </div>                    
