--- a/html/projects.html
+++ b/html/projects.html
@@ -30,7 +30,7 @@
                 <article class="project-article">
                     <h3>Portfolio</h3>
                     <p>
-                        Built online presence with portfolio website.
+                        Built online presence with portfolio website
                     </p>
                     <ul>
                         <li>Used HTML, CSS3 and Javascript to build static portfolio website</li>
