Completed projects.html

--- a/html/projects.html
+++ b/html/projects.html
@@ -39,7 +39,7 @@
                     </ul>
                 </article>
 
-                <!-- article 1 -->
+                <!-- article 2 -->
                 <article class="project-article">
                     <h3>Turtle Graphics</h3>
                     <p>
@@ -51,15 +51,28 @@
                     </ul>
                 </article>
 
-                <!-- article 1 -->
+                <!-- article 3 -->
                 <article class="project-article">
                     <h3>To-Do Application</h3>
                     <p>
                         Custom command-line To-Do Application to create and manage tasks
                     </p>
                     <ul>
-                        <li>Programmed backend in Python to create a command-line app</li>
+                        <li>Programmed in Python to create a command-line app</li>
                         <li>Added feature for users to sign up or log in and authenticate accordingly</li>
+                        <li>Sample code to show understading of OOP principles</li>
+                    </ul>
+                </article>
+
+                <!-- article 4 -->
+                <article class="project-article">
+                    <h3>Poker Probability</h3>
+                    <p>
+                        C program to calucalte the Poker Probability hand in a 5 card game
+                    </p>
+                    <ul>
+                        <li>Programmed to practice C programming skills</li>
+                        <li>Got familiar with Poker hands as well</li>
                     </ul>
                 </article>
 
