--- a/html/projects.html
+++ b/html/projects.html
@@ -16,8 +16,8 @@
             <ul>
                 <li><a href="index.html"><h1>Parampal Singh Gill</h1></a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="#.html">Experience</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="experience.html">Experience</a></li>
+                <li><a href="#.html">Projects</a></li>
                 <li><a href="education.html">Education</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
