--- a/html/experience.html
+++ b/html/experience.html
@@ -9,6 +9,7 @@
     <head>
         <title>Parampal Singh Gill | Software Developer</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
