--- a/html/index.html
+++ b/html/index.html
@@ -24,63 +24,65 @@
     </head>
 
     <body>
-        <div class="header-and-main">
-            <header>
-                <div id="nav-bar">
-                    <div>                        
+        <div id="wrapper">
+            <div class="header-and-main">
+                <header>
+                    <div id="nav-bar">
+                        <div>                        
+                        </div>
+                        <div class="name-and-title">
+                            <a href="#"><h1>Parampal Singh Gill</h1></a>
+                            <h2>Software Engineer</h2>
+                        </div>
+
+                        <!--
+                        HTML JavaScript Open/Close Menu 2 of 3
+
+                        this class="btn-menu" is required.
+                        its how JavaScript will be able to detect the user click/tapping the element
+                        it can be any element, but a <button> is a semanticly reasonable choice
+                        -->			
+                        <button class="btn-menu">
+                            <div class="bar1"></div>
+                            <div class="bar2"></div>
+                            <div class="bar3"></div>
+                        </button>
                     </div>
-                    <div class="name-and-title">
-                        <a href="#"><h1>Parampal Singh Gill</h1></a>
-                        <h2>Software Engineer</h2>
-                    </div>
 
-                    <!--
-                    HTML JavaScript Open/Close Menu 2 of 3
+                    <!-- 
+                    HTML JavaScript Open/Close Menu 3 of 3			
+                    ensure your unordered list of links is in the
+                    <nav> element. it will be the entire <nav>
+                    that JavaScript shows/hides when user interacts
+                    -->		
+                    <nav>
+                        <ul id="nav-ul">
+                            <li class="nav-li"><a class="nav-link" href="about.html">About</a></li>
+                            <li class="nav-li"><a class="nav-link" href="experience.html">Experience</a></li>
+                            <li class="nav-li"><a class="nav-link" href="projects.html">Projects</a></li>
+                            <li class="nav-li"><a class="nav-link" href="education.html">Education</a></li>
+                            <li class="nav-li"><a class="nav-link" href="contact.html">Contact</a></li>
+                        </ul>
+                    </nav>
+                </header>
 
-                    this class="btn-menu" is required.
-                    its how JavaScript will be able to detect the user click/tapping the element
-                    it can be any element, but a <button> is a semanticly reasonable choice
-                    -->			
-                    <button class="btn-menu">
-                        <div class="bar1"></div>
-                        <div class="bar2"></div>
-                        <div class="bar3"></div>
-                    </button>
-                </div>
+                <main>
+                    <section class="intro">
+                        <h1>I want to <span class="text-background">build things</span> that make a <span class="text-decoration">difference</span>.</h1>
+                    </section>
+                    
+                </main>
+            </div>
 
-                <!-- 
-                HTML JavaScript Open/Close Menu 3 of 3			
-                ensure your unordered list of links is in the
-                <nav> element. it will be the entire <nav>
-                that JavaScript shows/hides when user interacts
-                -->		
-                <nav>
-                    <ul id="nav-ul">
-                        <li class="nav-li"><a class="nav-link" href="about.html">About</a></li>
-                        <li class="nav-li"><a class="nav-link" href="experience.html">Experience</a></li>
-                        <li class="nav-li"><a class="nav-link" href="projects.html">Projects</a></li>
-                        <li class="nav-li"><a class="nav-link" href="education.html">Education</a></li>
-                        <li class="nav-li"><a class="nav-link" href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-            </header>
+            <footer>
+                <h2>Contact me</h2>
+                <ul id="social-ul">
+                    <li><a class="social-a" href="mailto:parampalsinghgill@gmail.com"><img src="../images/icons/icon-email.png" alt="Email parampalsinghgill@gmail.com"></a></li>
+                    <li><a class="social-a" href="www.linkedin.com/in/parampalsinghgill"><img src="../images/icons/icon-linkedin.png" alt="Find me on Linkedin"></a></li>
+                    <li><a class="social-a" href="https://github.com/parampalsinghgill"><img src="../images/icons/icon-github.png" alt="See my work on Github"></a></li>
+                </ul>
 
-            <main>
-                <section class="intro">
-                    <h1>I want to <span class="text-background">build things</span> that make a <span class="text-decoration">difference</span>.</h1>
-                </section>
-                
-            </main>
+            </footer>
         </div>
-
-        <footer>
-            <h2>Contact me</h2>
-            <ul id="social-ul">
-                <li><a class="social-a email" href="mailto:parampalsinghgill@gmail.com">Email</a></li>
-                <li><a class="social-a linkedin" href="www.linkedin.com/in/parampalsinghgill">Linkedin</a></li>
-                <li><a class="social-a github" href="https://github.com/parampalsinghgill">Github</a></li>
-            </ul>
-
-        </footer>
     </body>
 </html>
