--- a/html/about.html
+++ b/html/about.html
@@ -25,64 +25,59 @@
 
     <body>
         <div id="wrapper">
-            <div class="header-and-main">
-                <header>
-                    <div id="nav-bar">
-                        <div class="name-and-title">
-                            <a href="index.html"><h1>Parampal Singh Gill</h1></a>
-                            <h2>Software Engineer</h2>
-                        </div>
-
-                        <!--
-                        HTML JavaScript Open/Close Menu 2 of 3
-
-                        this class="btn-menu" is required.
-                        its how JavaScript will be able to detect the user click/tapping the element
-                        it can be any element, but a <button> is a semanticly reasonable choice
-                        -->			
-                        <button class="btn-menu">
-                            <div class="bar1"></div>
-                            <div class="bar2"></div>
-                            <div class="bar3"></div>
-                        </button>
+            <header>
+                <div id="nav-bar">
+                    <div class="name-and-title">
+                        <a href="index.html"><h1>Parampal Singh Gill</h1></a>
+                        <h2>Software Engineer</h2>
                     </div>
 
-                    <!-- 
-                    HTML JavaScript Open/Close Menu 3 of 3			
-                    ensure your unordered list of links is in the
-                    <nav> element. it will be the entire <nav>
-                    that JavaScript shows/hides when user interacts
-                    -->		
-                    <nav>
-                        <ul id="nav-ul">
-                            <li class="nav-li"><a class="nav-link" href="about.html">About</a></li>
-                            <li class="nav-li"><a class="nav-link" href="experience.html">Experience</a></li>
-                            <li class="nav-li"><a class="nav-link" href="projects.html">Projects</a></li>
-                            <li class="nav-li"><a class="nav-link" href="education.html">Education</a></li>
-                            <li class="nav-li"><a class="nav-link" href="contact.html">Contact</a></li>
-                        </ul>
-                    </nav>
-                </header>
+                    <!--
+                    HTML JavaScript Open/Close Menu 2 of 3
+
+                    this class="btn-menu" is required.
+                    its how JavaScript will be able to detect the user click/tapping the element
+                    it can be any element, but a <button> is a semanticly reasonable choice
+                    -->			
+                    <button class="btn-menu">
+                        <div class="bar1"></div>
+                        <div class="bar2"></div>
+                        <div class="bar3"></div>
+                    </button>
+                </div>
+
+                <!-- 
+                HTML JavaScript Open/Close Menu 3 of 3			
+                ensure your unordered list of links is in the
+                <nav> element. it will be the entire <nav>
+                that JavaScript shows/hides when user interacts
+                -->		
+                <nav>
+                    <ul id="nav-ul">
+                        <li class="nav-li"><a class="nav-link" href="about.html">About</a></li>
+                        <li class="nav-li"><a class="nav-link" href="experience.html">Experience</a></li>
+                        <li class="nav-li"><a class="nav-link" href="projects.html">Projects</a></li>
+                        <li class="nav-li"><a class="nav-link" href="education.html">Education</a></li>
+                        <li class="nav-li"><a class="nav-link" href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
 
             <main>
                 <h2>About</h2>
-                <section>
-                    <h2>Versatile Software Developer skilled in backend development and eager learner in frontend technologies, driven by a passion for creating significant impact.</h2>
+                <section class="about">
+                    <blockquote>Versatile Software Developer skilled in backend development and eager learner in frontend technologies, driven by a passion for creating significant impact.</blockquote>
                     <p>
                         Hi, I'm Parampal Singh Gill, a Software Developer based in Vancouver, BC. With more than 5 years of experience, I've mainly focused on 
                         backend development and also dabbled a bit in frontend work. I've become skilled in several programming languages like Python, Java, C#, C, 
-                        and C++. I'm familiar with Agile methods like Scrum and tools such as Git and Jenkins for software development. My approach involves 
-                        continuous testing, thorough research, and detailed technical documentation. I love learning and excel both in teamwork and solo projects. 
-                        Right now, I'm looking for a challenging role where I can use my problem-solving skills to help a dynamic organization succeed.
+                        and C++. I'm familiar with Agile methods like Scrum and tools such as Git and Jenkins for software development. 
                     </p>
 
                     <p>
-                        I love tackling important challenges and crafting solutions that really matter. My goal is to make a positive difference wherever I go. 
-                        I'm excited about the opportunity to join a fast-growing company where I can use my skills to help make big advancements. I want to work 
-                        with a team that shares my passion for making the world a better place through creative ideas and actions.
+                        I love tackling important challenges and crafting solutions that really matter. My goal is to make a positive difference in the world with the work I do.
+                        I want to work with a team that shares my passion for making the world a better place through creative ideas and actions. I'm looking for a challenging 
+                        role where I can use my problem-solving skills to help a dynamic organization succeed.
                     </p>
-
-
                 </section>
                 
             </main>
