--- a/html/experience.html
+++ b/html/experience.html
@@ -7,34 +7,72 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Parampal Singh Gill | Software Developer</title>
+        <title>Parampal Singh Gill | Software Engineer</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="../css/style.css">
+
+        <!--
+		HTML JavaScript Open/Close Menu 1 of 3
+		Be sure to see the associated .css file for more!
+		
+		the following <script> tag loads a .js file		
+		from the scripts/ folder. this will enable the
+		open/close menu option
+		this tag should be in the <head>
+    	-->
+	    <script src="../scripts/menu.js" defer="defer"></script>
     </head>
 
     <body>
-        <nav>
-            <ul>
-                <li><a href="index.html"><h1>Parampal Singh Gill</h1></a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="#.html">Experience</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="education.html">Education</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div id="wrapper">
+            <header>
+                <div id="nav-bar">
+                    <div class="name-and-title">
+                        <a href="index.html"><h1>Parampal Singh Gill</h1></a>
+                        <h2>Software Engineer</h2>
+                    </div>
+
+                    <!--
+                    HTML JavaScript Open/Close Menu 2 of 3
+
+                    this class="btn-menu" is required.
+                    its how JavaScript will be able to detect the user click/tapping the element
+                    it can be any element, but a <button> is a semanticly reasonable choice
+                    -->			
+                    <button class="btn-menu">
+                        <div class="bar1"></div>
+                        <div class="bar2"></div>
+                        <div class="bar3"></div>
+                    </button>
+                </div>
+
+                <!-- 
+                HTML JavaScript Open/Close Menu 3 of 3			
+                ensure your unordered list of links is in the
+                <nav> element. it will be the entire <nav>
+                that JavaScript shows/hides when user interacts
+                -->		
+                <nav>
+                    <ul id="nav-ul">
+                        <li class="nav-li"><a class="nav-link" href="about.html">About</a></li>
+                        <li class="nav-li"><a class="nav-link" href="experience.html">Experience</a></li>
+                        <li class="nav-li"><a class="nav-link" href="projects.html">Projects</a></li>
+                        <li class="nav-li"><a class="nav-link" href="education.html">Education</a></li>
+                        <li class="nav-li"><a class="nav-link" href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
 
         <main>
             <h2>Experience</h2>
-            <section>
+            <section class="experience">
                 <!-- article 1 -->
                 <article class="work-experience-article">
-                    <div>
-                        <h3>Cadex</h3>
-                        <p>Richmond, B.C.</p>
+                    <div class="work-experience-header">
+                        <p><span class="company-name">Cadex</span>, Richmond, B.C.</p>
                         <p>July 2023 - present</p>
                     </div>
-                    <div>
+                    <div class="work-experience-description">
                         <h4>Software Engineer Contractor</h4>
                         <ul>
                             <li>Enhancing development with innovative features using Python, C# in multiple products/projects</li>
@@ -46,12 +84,11 @@
 
                 <!-- article 2 -->
                 <article class="work-experience-article">
-                    <div>
-                        <h3>Vecima</h3>
-                        <p>Victoria, B.C.</p>
+                    <div class="work-experience-header">
+                        <p><span class="company-name">Vecima</span>,Victoria, B.C.</p>
                         <p>August 2022 - July 2023</p>
                     </div>
-                    <div>
+                    <div class="work-experience-description">
                         <h4>Software Engineer</h4>
                         <ul>
                             <li>Implemented new features and bug fixes in software using Java and C++ to enhance the functionality of next-gen Remote-PHY node</li>
@@ -63,12 +100,11 @@
 
                 <!-- article 3 -->
                 <article class="work-experience-article">
-                    <div>
-                        <h3>Cadex</h3>
-                        <p>Richmond, B.C.</p>
+                    <div class="work-experience-header">
+                        <p><span class="company-name">Cadex</span>, Richmond, B.C.</p>
                         <p>February 2022 - August 2022</p>
                     </div>
-                    <div>
+                    <div class="work-experience-description">
                         <h4>Senior Research & SW Engineer</h4>
                         <ul>
                             <li>Spearheaded MicroPython software development for real-time EIS data processing on battery health tester</li>
@@ -81,12 +117,11 @@
 
                 <!-- article 4 -->
                 <article class="work-experience-article">
-                    <div>
-                        <h3>Cadex</h3>
-                        <p>Richmond, B.C.</p>
+                    <div class="work-experience-header">
+                        <p><span class="company-name">Cadex</span>, Richmond, B.C.</p>
                         <p>September 2017 - February 2022</p>
                     </div>
-                    <div>
+                    <div class="work-experience-description">
                         <h4>Research Engineer</h4>
                         <ul>
                             <li>Developed Python desktop application to streamline production, enabling test initiation on hardware devices and result retrieval</li>
@@ -100,12 +135,11 @@
 
                 <!-- article 5 -->
                 <article class="work-experience-article">
-                    <div>
-                        <h3>Cadex</h3>
-                        <p>Richmond, B.C.</p>
+                    <div class="work-experience-header">
+                        <p><span class="company-name">Cadex</span>, Richmond, B.C.</p>
                         <p>September 2015 - August 2017</p>
                     </div>
-                    <div>
+                    <div class="work-experience-description">
                         <h4>Research Engineer (Various Co-op terms)</h4>
                         <ul>
                             <li>Conducted data analytics using Python and MATLAB to derive valuable insights from complex datasets</li>
@@ -118,14 +152,15 @@
             
         </main>
 
-        <footer>
-            <h2>Contact me</h2>
-            <ul>
-                <li><a href="mailto:parampalsinghgill@gmail.com">parampalsinghgill@gmail.com</a></li>
-                <li><a href="www.linkedin.com/in/parampalsinghgill">linkedin.com/in/parampalsinghgill</a></li>
-                <li><a href="https://github.com/parampalsinghgill">github.com/parampalsinghgill</a></li>
-            </ul>
+            <footer>
+                <h2>Contact me</h2>
+                <ul id="social-ul">
+                    <li><a class="social-a" href="mailto:parampalsinghgill@gmail.com"><img src="../images/icons/icon-email.png" alt="Email parampalsinghgill@gmail.com"></a></li>
+                    <li><a class="social-a" href="www.linkedin.com/in/parampalsinghgill"><img src="../images/icons/icon-linkedin.png" alt="Find me on Linkedin"></a></li>
+                    <li><a class="social-a" href="https://github.com/parampalsinghgill"><img src="../images/icons/icon-github.png" alt="See my work on Github"></a></li>
+                </ul>
 
-        </footer>
+            </footer>
+        </div>
     </body>
 </html>
