--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<meta http-equiv="refresh" content="0; url=https://parampalsinghgill.github.io/html/index.html">
+<!--
+    Portfolio
+    Author : Parampal Singh Gill
+    Date   : 15 February 2024
+-->
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta http-equiv="refresh" content="0; url=https://parampalsinghgill.github.io/html/index.html">
+    </head>
+
+    <body>
+    </body>
+</html>
