--- a/html/projects.html
+++ b/html/projects.html
@@ -7,89 +7,126 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Parampal Singh Gill | Software Developer</title>
+        <title>Parampal Singh Gill | Software Engineer</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="../css/style.css">
+
+        <!--
+		HTML JavaScript Open/Close Menu 1 of 3
+		Be sure to see the associated .css file for more!
+		
+		the following <script> tag loads a .js file		
+		from the scripts/ folder. this will enable the
+		open/close menu option
+		this tag should be in the <head>
+    	-->
+	    <script src="../scripts/menu.js" defer="defer"></script>
     </head>
 
     <body>
-        <nav>
-            <ul>
-                <li><a href="index.html"><h1>Parampal Singh Gill</h1></a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="experience.html">Experience</a></li>
-                <li><a href="#.html">Projects</a></li>
-                <li><a href="education.html">Education</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div id="wrapper">
+            <header>
+                <div id="nav-bar">
+                    <div class="name-and-title">
+                        <a href="index.html"><h1>Parampal Singh Gill</h1></a>
+                        <h2>Software Engineer</h2>
+                    </div>
 
-        <main>
-            <h2>Projects</h2>
-            <section>
-                <!-- article 1 -->
-                <article class="project-article">
-                    <h3>Portfolio</h3>
-                    <p>
-                        Built online presence with portfolio website
-                    </p>
-                    <ul>
-                        <li>Used HTML, CSS3 and Javascript to build static portfolio website</li>
-                        <li>CSS3 frontend</li>
-                        <li>Adopted best practices for writing semantically correct code</li>
+                    <!--
+                    HTML JavaScript Open/Close Menu 2 of 3
+
+                    this class="btn-menu" is required.
+                    its how JavaScript will be able to detect the user click/tapping the element
+                    it can be any element, but a <button> is a semanticly reasonable choice
+                    -->			
+                    <button class="btn-menu">
+                        <div class="bar1"></div>
+                        <div class="bar2"></div>
+                        <div class="bar3"></div>
+                    </button>
+                </div>
+
+                <!-- 
+                HTML JavaScript Open/Close Menu 3 of 3			
+                ensure your unordered list of links is in the
+                <nav> element. it will be the entire <nav>
+                that JavaScript shows/hides when user interacts
+                -->		
+                <nav>
+                    <ul id="nav-ul">
+                        <li class="nav-li"><a class="nav-link" href="about.html">About</a></li>
+                        <li class="nav-li"><a class="nav-link" href="experience.html">Experience</a></li>
+                        <li class="nav-li"><a class="nav-link" href="projects.html">Projects</a></li>
+                        <li class="nav-li"><a class="nav-link" href="education.html">Education</a></li>
+                        <li class="nav-li"><a class="nav-link" href="contact.html">Contact</a></li>
                     </ul>
-                </article>
+                </nav>
+            </header>
 
-                <!-- article 2 -->
-                <article class="project-article">
-                    <h3>Turtle Graphics</h3>
-                    <p>
-                        Program to draw turtle graphics in 2-Dimension
-                    </p>
-                    <ul>
-                        <li>Programmed in C to draw turtle graphics on 2-D floor</li>
-                        <li>Program draws graphics based on commands given</li>
-                    </ul>
-                </article>
+            <main>
+                <h2>Projects</h2>
+                <section>
+                    <!-- article 1 -->
+                    <article class="project-article">
+                        <h3>Portfolio</h3>
+                        <p>
+                            Built online presence with portfolio website
+                        </p>
+                        <ul>
+                            <li>Used HTML, CSS3 and Javascript to build static portfolio website</li>
+                            <li>CSS3 frontend</li>
+                            <li>Adopted best practices for writing semantically correct code</li>
+                        </ul>
+                    </article>
 
-                <!-- article 3 -->
-                <article class="project-article">
-                    <h3>To-Do Application</h3>
-                    <p>
-                        Custom command-line To-Do Application to create and manage tasks
-                    </p>
-                    <ul>
-                        <li>Programmed in Python to create a command-line app</li>
-                        <li>Added feature for users to sign up or log in and authenticate accordingly</li>
-                        <li>Sample code to show understading of OOP principles</li>
-                    </ul>
-                </article>
+                    <!-- article 2 -->
+                    <article class="project-article">
+                        <h3>Turtle Graphics</h3>
+                        <p>
+                            Program to draw turtle graphics in 2-Dimension
+                        </p>
+                        <ul>
+                            <li>Programmed in C to draw turtle graphics on 2-D floor</li>
+                            <li>Program draws graphics based on commands given</li>
+                        </ul>
+                    </article>
 
-                <!-- article 4 -->
-                <article class="project-article">
-                    <h3>Poker Probability</h3>
-                    <p>
-                        C program to calucalte the Poker Probability hand in a 5 card game
-                    </p>
-                    <ul>
-                        <li>Programmed to practice C programming skills</li>
-                        <li>Got familiar with Poker hands as well</li>
-                    </ul>
-                </article>
+                    <!-- article 3 -->
+                    <article class="project-article">
+                        <h3>To-Do Application</h3>
+                        <p>
+                            Custom command-line To-Do Application to create and manage tasks
+                        </p>
+                        <ul>
+                            <li>Programmed in Python to create a command-line app</li>
+                            <li>Added feature for users to sign up or log in and authenticate accordingly</li>
+                            <li>Sample code to show understading of OOP principles</li>
+                        </ul>
+                    </article>
 
-                
-            </section>
-            
-        </main>
+                    <!-- article 4 -->
+                    <article class="project-article">
+                        <h3>Poker Probability</h3>
+                        <p>
+                            C program to calucalte the Poker Probability hand in a 5 card game
+                        </p>
+                        <ul>
+                            <li>Programmed to practice C programming skills</li>
+                            <li>Got familiar with Poker hands as well</li>
+                        </ul>
+                    </article>
+                </section>                
+            </main>
 
-        <footer>
-            <h2>Contact me</h2>
-            <ul>
-                <li><a href="mailto:parampalsinghgill@gmail.com">parampalsinghgill@gmail.com</a></li>
-                <li><a href="www.linkedin.com/in/parampalsinghgill">linkedin.com/in/parampalsinghgill</a></li>
-                <li><a href="https://github.com/parampalsinghgill">github.com/parampalsinghgill</a></li>
-            </ul>
+            <footer>
+                <h2>Contact me</h2>
+                <ul id="social-ul">
+                    <li><a class="social-a" href="mailto:parampalsinghgill@gmail.com"><img src="../images/icons/icon-email.png" alt="Email parampalsinghgill@gmail.com"></a></li>
+                    <li><a class="social-a" href="https://www.linkedin.com/in/parampalsinghgill"><img src="../images/icons/icon-linkedin.png" alt="Find me on Linkedin"></a></li>
+                    <li><a class="social-a" href="https://github.com/parampalsinghgill"><img src="../images/icons/icon-github.png" alt="See my work on Github"></a></li>
+                </ul>
 
-        </footer>
+            </footer>
+        </div>
     </body>
 </html>
