updated projects design

--- a/html/projects.html
+++ b/html/projects.html
@@ -65,7 +65,7 @@
 
             <main>
                 <h2>Projects</h2>
-                <section>
+                <section class="projects-grid">
                     <!-- article 1 -->
                     <article class="project-article">
                         <h3>Portfolio</h3>
