completed grid in projects page

--- a/html/projects.html
+++ b/html/projects.html
@@ -70,7 +70,7 @@
                     <article class="project-article">
                         <h3>Portfolio</h3>
                         <p>
-                            Built online presence with portfolio website
+                            Built online presence with portfolio website.
                         </p>
                         <ul>
                             <li>Used HTML, CSS3 and Javascript to build static portfolio website</li>
@@ -83,7 +83,7 @@
                     <article class="project-article">
                         <h3>Turtle Graphics</h3>
                         <p>
-                            Program to draw turtle graphics in 2-Dimension
+                            Program to draw turtle graphics in 2-Dimension.
                         </p>
                         <ul>
                             <li>Programmed in C to draw turtle graphics on 2-D floor</li>
@@ -95,7 +95,7 @@
                     <article class="project-article">
                         <h3>To-Do Application</h3>
                         <p>
-                            Custom command-line To-Do Application to create and manage tasks
+                            Custom command-line To-Do Application to create and manage tasks.
                         </p>
                         <ul>
                             <li>Programmed in Python to create a command-line app</li>
@@ -108,7 +108,7 @@
                     <article class="project-article">
                         <h3>Poker Probability</h3>
                         <p>
-                            C program to calucalte the Poker Probability hand in a 5 card game
+                            C program to calucalte the Poker Probability hand in a 5 card game.
                         </p>
                         <ul>
                             <li>Programmed to practice C programming skills</li>
