Completed education page

--- a/html/education.html
+++ b/html/education.html
@@ -65,42 +65,48 @@
 
         <main>
             <h2>Education</h2>
-            <section>
+            <section class="education-grid">
                 <!-- article 1 -->
-                <article class="education-article">
-                    <h3>British Columbia Institute of Technology</h3>
-                    <div>
-                        <p>Vancouver, Canada</p>
-                        <p>2019 - present</p>
+                <article class="education-article bcit">
+                    <div class="education-article-bgcolor">
+                        <h3>British Columbia Institute of Technology</h3>
+                        <div class="education-article-place-time">
+                            <p>Vancouver, Canada</p>
+                            <p>2019 - present</p>
+                        </div>
+                        <ul>
+                            <li>Continuing education towards Applied Software Development certificate</li>
+                        </ul>
                     </div>
-                    <ul>
-                        <li>Continuing education to attain Applied Software Development certificate</li>
-                    </ul>
                 </article>
 
                 <!-- article 2 -->
-                <article class="education-article">
-                    <h3>Simon Fraser University</h3>
-                    <div>
-                        <p>Burnaby, Canada</p>
-                        <p>2014 - 2017</p>
+                <article class="education-article sfu">
+                    <div class="education-article-bgcolor">
+                        <h3>Simon Fraser University</h3>
+                        <div class="education-article-place-time">
+                            <p>Burnaby, Canada</p>
+                            <p>2014 - 2017</p>
+                        </div>
+                        <ul>
+                            <li>Master of Engineering</li>
+                            <li>Developed, implemented and optimized LDA ML algorithm for IoT applications in C programming language</li>
+                        </ul>
                     </div>
-                    <ul>
-                        <li>Master of Engineering</li>
-                        <li>Developed, implemented and optimized LDA ML algorithm for IoT applications in C programming language</li>
-                    </ul>
                 </article>
 
                 <!-- article 3 -->
-                <article class="education-article">
-                    <h3>Punjab Technical University</h3>
-                    <div>
-                        <p>Punjab, India</p>
-                        <p>2010 - 2014</p>
+                <article class="education-article ptu">
+                    <div class="education-article-bgcolor">
+                        <h3>Punjab Technical University</h3>
+                        <div class="education-article-place-time">
+                            <p>Punjab, India</p>
+                            <p>2010 - 2014</p>
+                        </div>
+                        <ul>
+                            <li>Bachelor of Technology, Electronics and Communications</li>
+                        </ul>
                     </div>
-                    <ul>
-                        <li>Bachelor of Technology, Electronics and Communications</li>
-                    </ul>
                 </article>
             </section>
             
