- updated meta tags in all pages

--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,8 @@
     <head>
         <title>Parampal Singh Gill | Software Engineer</title>
         <meta charset="utf-8">
+        <meta name="description" content="Parampal Singh Gill : Versatile Software Developer skilled in backend languages like C#, Python, Java, C and C++.">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link rel="stylesheet" href="../css/style.css">
 
         <!--
@@ -45,7 +47,7 @@
                             <div class="bar2"></div>
                             <div class="bar3"></div>
                         </button>
-                    </div>
+                    </div> 
 
                     <!-- 
                     HTML JavaScript Open/Close Menu 3 of 3			
