--- a/html/projects.html
+++ b/html/projects.html
@@ -9,6 +9,8 @@
     <head>
         <title>Parampal Singh Gill | Software Engineer</title>
         <meta charset="utf-8">
+        <meta name="description" content="Parampal Singh Gill : Versatile Software Developer skilled in backend languages like C#, Python, Java, C and C++.">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link rel="stylesheet" href="../css/style.css">
 
         <!--
