--- a/html/contact.html
+++ b/html/contact.html
@@ -70,7 +70,7 @@
             <section>
                 <form   action=""
                         method="get"
-                        class="">
+                        class="basic-form">
 
                         <!-- Name -->
                         <div class="input-label-group">
