added comments on root index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!--
+    This file is not the part of the project. 
+    THis file is only pointing the github pages to the actual index file which is in html folder.
     Portfolio
     Author : Parampal Singh Gill
     Date   : 15 February 2024
